# RaspberryPi-WiFi-CSI

./: .gitignore  LICENSE  README.md  protocol.md
iOS/PiVideoViewer/: project.yml
iOS/PiVideoViewer/PiVideoViewer/: AppState.swift  BLEManager.swift  BLEProtocol.swift  BonjourDiscoveryManager.swift  ContentView.swift  DebugOverlayView.swift  HardwareH264Decoder.swift  Info.plist  PiStorage.swift  PiVideoViewerApp.swift  RootView.swift  ThermalMonitor.swift  UDPFrameReassembler.swift  UDPVideoClient.swift  VideoDisplayView.swift
iOS/PiVideoViewer/PiVideoViewer.xcodeproj/: project.pbxproj
iOS/PiVideoViewer/PiVideoViewer/Views/: BLEScanView.swift  ChangePasswordSheet.swift  ChangeWiFiSheet.swift  PINSetupView.swift  SettingsMenuView.swift  StartView.swift  WiFiSetupView.swift
iOS/PiVideoViewer/PiVideoViewerTests/: UDPFrameReassemblerTests.swift
pi/: pyproject.toml  requirements.txt
pi/avahi/: wificsi.service
pi/bluetooth/: main.conf
pi/pi_ble/: __init__.py  __main__.py  auth.py  config.py  protocol.py  server.py  stream.py  wifi.py
pi/pi_streamer/: __init__.py  camera.py  encoder.py  hand_roi.py  hand_types.py  inference.py  main.py  overlay.py  postprocess.py  postprocess_hand.py  postprocess_yolo26.py  tracker.py  udp_protocol.py  wire_format.py
pi/pi_streamer_c/: CMakeLists.txt
pi/pi_streamer_c/include/compat/: arch.h
pi/pi_streamer_c/include/pi_streamer/: _test_hooks.h  camera.h  detection.h  encoder.h  inference.h  inference_state.h  logger.h  overlay.h  pipeline.h  postprocess.h  ring_buffer.h  rt.h  state_machine.h  udp_sender.h  wire_format.h
pi/pi_streamer_c/scripts/: bootstrap_pi.sh  build.sh  deploy.sh  install_deps.sh  run_tests.sh
pi/pi_streamer_c/src/: camera_libcamera.cpp  camera_mock.c  encoder_mock.c  encoder_x264.c  inference_hailort.cpp  inference_mock.c  inference_state.c  logger.c  main.c  overlay.c  pipeline.c  postprocess.c  ring_buffer.c  rt.c  state_machine.c  udp_sender_iouring.c  udp_sender_mock.c  wire_format.c
pi/pi_streamer_c/tests/unit/: CMakeLists.txt  test_camera.c  test_encoder.c  test_inference.c  test_inference_state.c  test_logger.c  test_overlay.c  test_pipeline.c  test_postprocess.c  test_ring_buffer.c  test_rt.c  test_state_machine.c  test_udp_sender.c  test_wire_format.c
pi/scripts/: install.sh  install_ble.sh  run.sh
pi/systemd/: pi-ble.service  pi-streamer-c.service
